# solrunners

./: .gitignore  CHECKOUT.md  ENTROPY.md  Entro.ai.py  Entro.py  Fountain.ai.py  Fountain.py  Heads.ai.py  Heads.py  README.md  Runners.iterm2arrangement  brew.txt  deployment.sh  fountain 2.py  generator.py  pyproject.toml  requirements.ai.txt  requirements.lite.txt  requirements.txt  runner.sh  sol.ai.py  sol.ai.test.py  sol.audio.heads.old.yaml  sol.audio.heads.yaml  sol.audio.requirements.txt  sol.audio.yaml  sol.authors.yaml  sol.config.yaml  sol.heads.yaml  sol.runner.sh  sol.tester.py  sol.uploader.sh  sol.video.py  sol.video.requirements.txt  tate.py  telegraf.conf  test.ai 2.py  test.py  uploader.sh
_removing/: Audio.py  runner.py  video.py
access/: DEPLOY.md  authorized_keys  id_ed25519  id_ed25519.pub
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  entropy.yml  entropy_dac.yml  fountain.yml  heads.yml  tate.yml
ansible/inventory/group_vars/all/: vars.yml
ansible/playbooks/: deploy-media.yml  restart-services.yml  setup-boot-logo.yml  setup-entropy-dac.yml  setup-entropy.yml  setup-fountain.yml  setup-heads.yml  setup-tate.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: bashrc.j2
ansible/roles/display/tasks/: main.yml
ansible/roles/entropy/handlers/: main.yml
ansible/roles/entropy/tasks/: main.yml
ansible/roles/fountain/handlers/: main.yml
ansible/roles/fountain/tasks/: main.yml
ansible/roles/heads/handlers/: main.yml
ansible/roles/heads/tasks/: main.yml
ansible/roles/tate/handlers/: main.yml
ansible/roles/tate/tasks/: main.yml
arduino/: STRIPS.md
configurations/: .bashrc  .bashrc.fountain  .bashrc.tate  .xinitrc  .xinitrc.entropy  .xinitrc.heads  set_shm.sh  set_systemd.ai.sh  set_systemd.sh  sync_packages.sh  xinit.entropy.ai.sh  xinit.heads.ai.sh  xinit.tate.sh
configurations/room5/home/zero/: .xinitrc
configurations/systemd/: media_to_shm.sh  sol-watcher.path  sol-watcher.service  sol.entropy.ai.service  sol.fountain.ai.service  sol.fountain.service  sol.heads.ai.service  sol.service  sol.tate.service  storage.service
configurations/telegraf/: telegraf.sh  update.sh
docs/: AI_CONTEXT.md  ANSIBLE.md  API.txt  DEPLOYMENT.md  DHCP.md  ENTROPY.md  EPAPER.md  FOUNTAIN.md  OCTOPUS.md  OPENCV.md  PYGLET.md  RASPBERRY.md  SENSORS.md  SOL-AUDIO.md  SOURCES.md  TATE 2.md  TATE.md  cmds.txt  pribuzni.001.html
docs.ai/: DEPLOYMENT.ai.md  README.ai.md  REDESIGN.ai.md  RPI_RUNTIME.ai.md  SIMPLIFICATION.ai.md
modules/: Audio.py  Config.ai.py  Config.py  Controllers.py  Display.py  Entro.py  MIDI.py  Sensors.py  SolAudio.py  SolVideo.py  VideoPlayer.backup.py  VideoPlayer.py
sol/: Entro.py  Fontana.py  Fountain.py  Heads.py  TODO.md  audio.py  runner.py  video.py
sol-audio/: requirements.txt  tester.py  venv.sh
sol-audio/app/: logging_config.py  main.py
sol-video/: amp.py  entro.py  requirements.txt
telegraf/: telegraf.conf  update.sh
