[project]
name = "solrunners"
version = "0.1.0"
# Python 3.11 is the proven baseline on all RPi nodes and works on macOS too.
# pyglet 1.5.27 is the only confirmed-working version with the current AV-sync
# code in Entro.py and Heads.py.  Do NOT bump pyglet without full on-device testing.
requires-python = ">=3.11"
dependencies = [
    "numpy",
    # pyglet and opencv have no armv7l (32-bit RPi 3) wheels — exclude them on
    # that platform. Fountain is the only armv7l node; it needs neither.
    "pyglet==1.5.27 ; platform_machine != 'armv7l'",
    "opencv-contrib-python ; platform_machine != 'armv7l'",   # contrib for face-detection (Heads.py)
    "ruamel.yaml",
    "scipy ; platform_machine != 'armv7l'",  # no armv7l wheel in recent versions
    # Ansible runs from the project venv on the CONTROL machine only.
    # RPi target nodes never need ansible-core; excluding on armv7l also avoids
    # cffi/cryptography build failures (no libffi-dev on small SD cards).
    "ansible-core ; platform_machine != 'armv7l'",
]
